--- a/yt_json_codelab.html
+++ b/yt_json_codelab.html
@@ -1,34 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>YouTube Data API via JSON: embedding videos in your site</title>
   <script type="text/javascript" src="http://swfobject.googlecode.com/svn/trunk/swfobject/swfobject.js"></script>
-  <script type="text/javascript" src="functions.js">
+  <script src="functions.js">
 </script>
-<script src="http://www.google.com/uds/api?file=uds.js&v=1.0"
-    type="text/javascript"></script>
-<link href="http://www.google.com/uds/css/gsearch.css"
-    rel="stylesheet" type="text/css"/>
-<script src="http://www.google.com/uds/solutions/videobar/gsvideobar.js"
-    type="text/javascript"></script>
-<link href="http://www.google.com/uds/solutions/videobar/gsvideobar.css"
-    rel="stylesheet" type="text/css"/>
 <style>
-pre {
-  background-color:#FAFAFA;
-  border:1px solid #BBBBBB;
-  font-size:9pt;
-  line-height:125%;
-  margin:1em 0pt 0pt;
-  overflow:auto;
-  padding:0.99em;
-}
-code, pre {
-  color:#007000;
-  font-family:monospace;
-}
-.titlec {
-  font-size: small;
-}
 ul.videos li {
   float: left;
   width: 10em;
@@ -41,15 +18,6 @@ ul.videos
   margin-left: 0em;
   list-style: none;
 }
-#videoBar {
-  width : 160px;
-  margin-right: 5px;
-  margin-left: 5px;
-  padding-top : 4px;
-  padding-right : 4px;
-  padding-left : 4px;
-  padding-bottom : 0px;
-}
 </style>
 </head>
 <body>
@@ -57,9 +25,12 @@ ul.videos
     <object id="player"></object>
   </div>
   <div id="videos2"></div>
+  <div id="videos"></div>
   <script 
-    type="text/javascript" 
     src="http://gdata.youtube.com/feeds/api/videos?q=martial+arts+tricking&alt=json&format=5&max-results=20&orderby=published&&callback=showMyVideos2">
+  </script>
+  <script 
+    src="http://gdata.youtube.com/feeds/api/videos?q=martial+arts+tricking&alt=json&format=5&max-results=20&orderby=published&&callback=showMyVideos">
   </script>
 </body>
 </html>
