Function BETA update

--- a/simpletrickfeed.html
+++ b/simpletrickfeed.html
@@ -9,7 +9,7 @@
 		var newurl = "http://youtube.com/embed/"+datas+"?autoplay=1";
 		return newurl;
 	}
-	function changethisshit(datas){
+	function changeThisId(datas){
 		document.getElementById("player").setAttribute("src",getthisid(datas));
 	}
 	</script>
