--- a/simpletrickfeed.html
+++ b/simpletrickfeed.html
@@ -3,7 +3,7 @@
 <head>
 	<title>TRICK FEED V1.0 BETA</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" "style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script>
 	function getThisId(datum){
 		var newUrl = "http://youtube.com/embed/"+datum+"?autoplay=1";
@@ -20,13 +20,12 @@
 	<h3>Click a Title in the feed to begin!</h3>
 	<div id="vidplay">
 	<iframe id="player" width="640" height="390"
-  src="http://www.youtube.com/embed/"
-  frameborder="0"></iframe>
+  src="http://www.youtube.com/embed/"></iframe>
   <!--<p onclick="changethisshit('zmiJVPjyux8')"> Test me</p>-->
 </div>
 	<div id="videos"></div>
 	<script 
-    src="https://gdata.youtube.com/feeds/api/videos?q=martial+arts+tricking&alt=json&format=5&max-results=20&orderby=published&callback=showMyVideos">
+    src="https://gdata.youtube.com/feeds/api/videos?q=martial+arts+tricking&amp;alt=json&amp;format=5&amp;max-results=20&amp;orderby=published&amp;callback=showMyVideos">
   </script>
 </body>
 </html>
