Lil Change BETA update

--- a/simpletrickfeed.html
+++ b/simpletrickfeed.html
@@ -28,7 +28,7 @@
     src="https://gdata.youtube.com/feeds/api/videos?q=martial+arts+tricking&amp;alt=json&amp;format=5&amp;max-results=20&amp;orderby=published&amp;callback=showMyVideos">
   </script>
 <div id="footer">
-	Built in 2013 by <a href="http://tuss4dzigns.com">Tuss4 Dzigns</a>
+	Built on April 13th, 2013 by <a href="http://tuss4dzigns.com">Tuss4 Dzigns</a>
 </div>
 </body>
 </html>
