--- a/simpletrickfeed.html
+++ b/simpletrickfeed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TRICK FEED V1.0 BETA</title>
+	<title>trickFEED V1.0 BETA</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script>
@@ -16,7 +16,7 @@
 	<script src="functions.js"></script>
 </head>
 <body>
-	<h1>Welcome to TRICK FEED!</h1>
+	<h1>Welcome to trickFEED!</h1>
 	<h3>Click a Title in the feed to begin!</h3>
 	<div id="vidplay">
 	<iframe id="player" width="640" height="390"
