change in search query to "tricking"

--- a/simpletrickfeed.html
+++ b/simpletrickfeed.html
@@ -4,6 +4,7 @@
 	<title>trickFEED V1.0 BETA</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" type="image/png" href="http://tuss4dzigns.com/icon.png">
 	<script>
 	function getThisId(datum){
 		var newUrl = "http://youtube.com/embed/"+datum+"?autoplay=1";
@@ -25,7 +26,7 @@
 </div>
 	<div id="videos"></div>
 	<script 
-    src="https://gdata.youtube.com/feeds/api/videos?q=martial+arts+tricking&amp;alt=json&amp;format=5&amp;max-results=20&amp;orderby=published&amp;callback=showMyVideos">
+    src="https://gdata.youtube.com/feeds/api/videos?q=tricking&amp;alt=json&amp;format=5&amp;max-results=20&amp;orderby=published&amp;callback=showMyVideos">
   </script>
 <div id="footer">
 	Built on April 13th, 2013 by <a href="http://tuss4dzigns.com">Tuss4 Dzigns</a>
