CSS and jQuery Updated BETA

--- a/simpletrickfeed.html
+++ b/simpletrickfeed.html
@@ -5,6 +5,8 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" type="image/png" href="http://tuss4dzigns.com/icon.png">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="style.js"></script>
 	<script>
 	function getThisId(datum){
 		var newUrl = "http://youtube.com/embed/"+datum+"?autoplay=1";
