Layout and Style Changes BETA 2.0

--- a/simpletrickfeed.html
+++ b/simpletrickfeed.html
@@ -27,8 +27,10 @@
   <!--<p onclick="changethisshit('zmiJVPjyux8')"> Test me</p>-->
 </div>
 	<div id="videos"></div>
+	<button class="refreshFeed">Load More Videos</button>
 	<script 
-    src="https://gdata.youtube.com/feeds/api/videos?q=tricking&amp;alt=json&amp;format=5&amp;max-results=20&amp;orderby=published&amp;callback=showMyVideos">
+	id="dafeed"
+    src="https://gdata.youtube.com/feeds/api/videos?q=martial+tricking&amp;alt=json-in-script&amp;format=5&amp;max-results=30&amp;orderby=published&amp;callback=showMyVideos&amp;category=tricking">
   </script>
 <div id="footer">
 	Built on April 13th, 2013 by <a href="http://tuss4dzigns.com">Tuss4 Dzigns</a>
