--- a/tumblr.html
+++ b/tumblr.html
@@ -4,6 +4,16 @@
 	<meta charset="UTF-8">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<link rel="icon" type="image/png" href="http://tuss4dzigns.com/icon.png">
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-40530545-1', 'tuss4dzigns.com');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 	<script>
@@ -14,13 +24,13 @@
 			for (var i in data.response){
 				var tumbs = data.response[i];
 				if(tumbs.type ==='video'){
-					output +="<li><h5>"+tumbs.caption+"</h5>"+tumbs.date+" by <a href='"+tumbs.short_url+"'>"+tumbs.blog_name+"</a><br />"+tumbs.player[2].embed_code+"</li>";
+					output +="<li><h5>"+tumbs.caption+"</h5>"+tumbs.date+" by <a href='"+tumbs.short_url+"' target='_blank'>"+tumbs.blog_name+"</a><br />"+tumbs.player[2].embed_code+"</li>";
 				}
 				if(tumbs.type ==='text'){
-					output +="<li><h5>"+tumbs.title+"</h5>"+tumbs.date+" by <a href='"+tumbs.short_url+"'>"+tumbs.blog_name+"</a><br />"+tumbs.body+"</li>";
+					output +="<li><h5>"+tumbs.title+"</h5>"+tumbs.date+" by <a href='"+tumbs.short_url+"' target='_blank'>"+tumbs.blog_name+"</a><br />"+tumbs.body+"</li>";
 				}
 				if(tumbs.type ==='photo'){
-					output +="<li><h5>"+tumbs.caption+"</h5>"+tumbs.date+" by <a href='"+tumbs.short_url+"'>"+tumbs.blog_name+"</a><br /><a href='"+tumbs.post_url+"' target='_blank'>View Image</a></li>";
+					output +="<li><h5>"+tumbs.caption+"</h5>"+tumbs.date+" by <a href='"+tumbs.short_url+"' target='_blank'>"+tumbs.blog_name+"</a><br /><a href='"+tumbs.post_url+"' target='_blank'>View Image</a></li>";
 				}
 			}
 			output+="</ul>"
