--- a/twitter.html
+++ b/twitter.html
@@ -3,7 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-40530545-1', 'tuss4dzigns.com');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 	<script>
@@ -13,7 +22,15 @@
 				var output = "<ul>";
 				for(var i in data.results){
 					var tweets = data.results[i];
-					output += "<li><a href='http://twitter.com/"+tweets.from_user+"'>"+tweets.from_user+"</a>: "+ tweets.text +"</li>";
+					var tLinks = tweets.text.search("http:");
+					if(tLinks !== -1){
+						var tLink = tweets.text.substring(tLinks, tLinks+22);
+						var tEnd = tLinks + 23;
+						output += "<li><a href='http://twitter.com/"+tweets.from_user+"' target='_blank'>"+tweets.from_user+"</a>: "+ tweets.text.substring(0,tLinks-1) +" "+ "<a href='"+tLink+"' target='_blank'>"+ tLink + "</a> " + tweets.text.slice(tEnd) + "</li>";
+					}
+					else {
+						output += "<li><a href='http://twitter.com/"+tweets.from_user+"' target='_blank'>"+tweets.from_user+"</a>: "+ tweets.text +"</li>";
+					}
 				}
 				output += "</ul>"
 				document.getElementById("trickTweets").innerHTML = output;
