--- a/ytpjq.html
+++ b/ytpjq.html
@@ -5,8 +5,18 @@
 	<link rel="icon" type="image/png" href="http://tuss4dzigns.com/icon.png">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-40530545-1', 'tuss4dzigns.com');
+  ga('send', 'pageview');
+
+</script>
+	<script>
 	function getThisId(datum){
-		var newUrl = "http://youtube.com/embed/"+datum+"?autoplay=1";
+		var newUrl = "http://youtube.com/embed/"+datum+"?autoplay=1&allowFullScreen=true";
 		return newUrl;
 	}
 	function changeThisId(datum){
@@ -35,7 +45,6 @@
 			});
 		});
 	</script>
-	<!--<script src="functions.js"></script>-->
 	<style>
 		#videos {
 			float: left;
@@ -46,28 +55,25 @@
 		#ytplayer {
 			border: 0;
 		}
-		#sortMenu li {
+		.sortMenu {
 			display: inline-block;
 		}
 	</style>
 </head>
 <body>
-	<!--<div id="vidplay">
-	<iframe id="player" width="640" height="390"
-  src="http://www.youtube.com/embed/"></iframe>
-</div>-->
-	<div id="sortMenu">
+	<div>
 		<h3>Sort By:</h3>
 		<ul>
-			<li id="sortR"><button>Most Recent</button></li>
-			<li> | </li>
-			<li id="sortP"><button>Popularity</button></li>
+			<li class="sortMenu"><button id="sortR">Most Recent</button></li>
+			<li class="sortMenu"> | </li>
+			<li class="sortMenu"><button id="sortP">Popularity</button></li>
 		</ul>
 	</div>
 	<div id="ytcontent">
-	<div id="player"><iframe id="ytplayer" width="640" height="390"
-  src="http://www.youtube.com/embed/"></iframe></div>
-  	<div id="videos"></div>
+		<div id="player"><iframe id="ytplayer" width="640" height="390"
+  src="http://www.youtube.com/embed/"></iframe>
+  		</div>
+  		<div id="videos"></div>
   	</div>
 </body>
 </html>
