--- a/ytr.html
+++ b/ytr.html
@@ -5,8 +5,18 @@
 	<link rel="icon" type="image/png" href="http://tuss4dzigns.com/icon.png">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-40530545-1', 'tuss4dzigns.com');
+  ga('send', 'pageview');
+
+</script>
+	<script>
 	function getThisId(datum){
-		var newUrl = "http://youtube.com/embed/"+datum+"?autoplay=1";
+		var newUrl = "http://youtube.com/embed/"+datum+"?autoplay=1&allowFullScreen=true";
 		return newUrl;
 	}
 	function changeThisId(datum){
